--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<!--  Both of the below line is connected to static folder using jinja   -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-        <script src="{{ url_for('static', filename='js/test.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/test.js') }}"></script>/
     <title> {% block title %} {% endblock title %} - MyTodo</title>
 </head>
 
@@ -41,6 +42,7 @@
             </div>
         </div>
     </nav>
+<!-- In the below lines we used jinja to connect it to both index and update -->
 {% block body %}
     
 {% endblock body %}
