--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="container my-3">
         <h2>Your Todos</h2>
-        
+<!--                     Whenever u see | this kind of line in jinja it means filter -->
                 {% if allTodo|length == 0 %}
                    
                 <div class="alert alert-dark" role="alert">
@@ -40,11 +40,14 @@
                         <tbody>
               {% for todo in allTodo %}
               <tr>
+<!--                   We wrote below line so we get a perfect srno in ascending order -->
+<!--                   and double bracket stands for jinja variables -->
                 <th scope="row">{{loop.index}}</th>
                 <td>{{todo.title}}</td>
                 <td>{{todo.desc}}</td>
                 <td>{{todo.date_created}}</td>
                 <td>
+<!--                     below are imp lines compare it with app.py code -->
                   <a href="/update/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
                   <a href="/delete/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
                 
