--- a/templates/update.html
+++ b/templates/update.html
@@ -4,6 +4,7 @@
 
     <div class="container my-3">
         <h2>Update Todo</h2>
+<!--         this will give the below jinja variables to app.py to store it in database -->
         <form action="/update/{{todo.sno}}" method="POST">
             <div class="mb-3">
               <label for="title" class="form-label">Todo Title</label>
